--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <TextView
         android:id="@+id/titleTv"
         android:layout_width="wrap_content"
@@ -32,7 +31,6 @@
         android:layout_height="wrap_content"
         android:text="上一首"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/playBtn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.71" />
@@ -41,10 +39,11 @@
         android:id="@+id/initBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="播放歌曲"
-        app:layout_constraintBottom_toTopOf="@+id/pauseBtn"
-        app:layout_constraintEnd_toEndOf="@+id/pauseBtn"
-        app:layout_constraintStart_toEndOf="@+id/prevBtn" />
+        android:text="开始播放歌曲，初始化歌单"
+        app:layout_constraintBottom_toTopOf="@+id/playPauseBtn"
+        app:layout_constraintEnd_toEndOf="@+id/playPauseBtn"
+        app:layout_constraintStart_toStartOf="@+id/playPauseBtn"
+        app:layout_constraintTop_toBottomOf="@+id/titleTv" />
 
     <Button
         android:id="@+id/nextBtn"
@@ -53,29 +52,18 @@
         android:text="下一首"
         app:layout_constraintBottom_toBottomOf="@+id/prevBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pauseBtn"
         app:layout_constraintTop_toTopOf="@+id/prevBtn"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/playBtn"
+        android:id="@+id/playPauseBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="播放"
+        android:text="播放/暂停"
         app:layout_constraintBottom_toBottomOf="@+id/nextBtn"
-        app:layout_constraintEnd_toStartOf="@+id/pauseBtn"
+        app:layout_constraintEnd_toStartOf="@+id/nextBtn"
         app:layout_constraintStart_toEndOf="@+id/prevBtn"
         app:layout_constraintTop_toTopOf="@+id/nextBtn" />
 
-    <Button
-        android:id="@+id/pauseBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="暂停"
-        app:layout_constraintBottom_toBottomOf="@+id/nextBtn"
-        app:layout_constraintEnd_toStartOf="@+id/nextBtn"
-        app:layout_constraintStart_toEndOf="@+id/playBtn"
-        app:layout_constraintTop_toTopOf="@+id/nextBtn"
-        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
